--- a/dogparty/style.css
+++ b/dogparty/style.css
@@ -27,15 +27,14 @@ h3 {
 ul {
   color: #f0ead6;
   float: right;
-  margin-top: 1.5rem;
+  margin-top: 1.1rem;
   margin-left: auto;
   margin-right: auto;
-  padding: 2;
 }
 
 li {
   display: inline;
-  padding: 1.157rem;
+  padding: 1.16em 1.157em 1.46em 1.157em;
   }
 
 li:hover {
@@ -78,7 +77,7 @@ li:hover {
 }
 
 .colone {
-  width: 29rem;
+  width: 33%;
   display: inline-block;
   text-align: center;
 }
