--- a/dogparty/style.css
+++ b/dogparty/style.css
@@ -15,9 +15,8 @@ h1 {
 
 .dog-icon {
   width: auto;
-  height: 3rem;
-  margin-left: 1.8rem;
-  margin-top: .5rem;
+  height: 3em;
+  margin: .5em 0 0 1.8em;
 }
 
 h3 {
@@ -27,14 +26,12 @@ h3 {
 ul {
   color: #f0ead6;
   float: right;
-  margin-top: 1.1rem;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 1.1rem auto .5em auto;
 }
 
 li {
   display: inline;
-  padding: 1.16em 1.157em 1.46em 1.157em;
+  padding: 1.16em 1.157em 1.45em 1.157em;
   }
 
 li:hover {
@@ -53,7 +50,7 @@ li:hover {
   border-radius: 50%;
   border: 3px solid #4489a0;
   height: 18em;
-  margin: 4em 2em 2em 2em;
+  margin: 2em 2em 1em 2em;
 }
 
 .one-button {
@@ -71,7 +68,7 @@ li:hover {
 
 .dog2, .dog3, .dog4 {
   border-radius: 50%;
-  border: 2px solid #4489a0;
+  border: px solid #4489a0;
   height: 14rem;
   margin: 0 0 1.5em 2em;
 }
@@ -83,16 +80,13 @@ li:hover {
 }
 
 p {
-  margin-left: 1em;
+  margin: .5em 2em .2em 2em;
 }
 
 .butt {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 5rem;
-  margin-top: 3rem;
-  padding: .4rem;
+  margin: 2em auto 1.5em auto;
+  padding: .3rem;
   border: 3px solid #4489a0;
   background-color: white;
   color: #4489a0;
@@ -114,7 +108,7 @@ p {
 }
 
 footer {
-  padding: 1em;
+  padding: 1em 1.5em 1.5em 1.5em;
   background-color: #4489a0;
   text-align: center;
   color: white;
